src/components/app.css
* {
  box-sizing: border-box;
}

.done {
  text-decoration: line-through;
}

body {
  height: 100vh;
  /* background: rgb(198, 203, 228); */
  background: linear-gradient(
    354deg,
    rgba(198, 203, 228, 1) 17%,
    rgba(155, 163, 226, 1) 80%
  );
}

button:active {
  background-color: #b2b2b2;
}

button {
  border: 1px solid black;
  border-radius: 8px;
  box-shadow: none;
  cursor: pointer;
}

.modal--hidden {
  display: none;
}

.modal--container {
  background-color: white;
  position: fixed;
  width: 100vw;
  height: 80vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal--welcome {
  /* width: 50vw; */
  padding: 5vw;
  background-color: rgb(255, 255, 255);
  border: 1px solid #ccc;

  text-align: center;
}
.modal--instructions {
  max-width: 50%;
  padding: 5vw;
  background-color: rgb(255, 255, 255);
  border: 1px solid #ccc;

  text-align: center;
}
.modal--instructions > img {
  max-width: 100%;
}

/* .content--header {
  display: flex;
  align-items: center;
} */

.container--main {
  margin: 4vw;
  padding: 2vw;
  background-color: white;
  max-height: 90vh;
  border-radius: 8px;
}

.content--container {
  /* padding: 3vw; */
  display: flex;
  max-width: 100vw;
  min-height: 70vh;
  max-height: 95vh;

  /* gap: 3vw; */
}

.content--cardsList {
  background-color: rgb(228, 228, 228);
  border-radius: 8px;
  padding: 2vw;
  display: flex;
  flex-direction: column;
}

.cardlist--card {
  max-height: 75%;
  margin-left: 2%;
}

.content--cardsList--card {
  background-color: white;
  align-items: center;
  display: flex;
  height: 50px;
  width: 100%;
  max-width: 300px;
  border: 1px solid black;
  margin-bottom: 2vh;
  cursor: pointer;
  gap: 15px;
  border-radius: 8px;
  padding: 0 5px;
}

.content--cardsList--selector {
  width: 100%;
  margin-top: auto;
}

.content--card--image {
  max-width: 300px;
  max-height: auto;
}

.content--benefits {
  padding: 2vw;
  width: 50%;
  height: 100%;
  overflow: scroll;
}
.content--benefits,
.content--benefits * {
  background-color: white;
}

.expiring {
  background-color: rgb(255, 194, 194);
}
.urgent {
  background-color: rgb(255, 26, 26);
}
.card--selected {
  box-shadow: 1px 8px 5px 1px rgb(153, 153, 153), -3px 0px rgb(0, 0, 0);
}

/* 320px — 480px: Mobile devices
481px — 768px: iPads, Tablets
769px — 1024px: Small screens, laptops
1025px — 1200px: Desktops, large screens */

@media screen and (max-width: 1024px) {
}

@media screen and (max-width: 768px) {
  h2 {
    margin-bottom: 0;
  }
  h3 {
    margin-top: 5px;
  }
  .container--main {
    margin: 4vw;
    padding: 2vw;

    /* max-height: 95vh; */
  }

  .modal--instructions {
    max-width: 75%;
    padding: 3vw 0;
  }

  .content--container {
    padding: 0vw;
    height: 100%;
    min-height: 80vh;
  }

  .content--cardsList {
    overflow: scroll;
    padding: 2vw;
    gap: 10px;
    max-width: 40%;
  }
  .content--cardsList--card {
    padding: 5px 2px;
    width: 95%;
    gap: 8px;
  }

  .content--cardsList--selector {
    display: flex;
    flex-direction: column;
  }
  .content--cardsList--selector button {
    width: 60%;
  }
  .content--card--image {
    max-width: 230px;
  }

  .content--benefits {
    max-height: 100%;
    overflow: scroll;
  }
}

@media screen and (max-width: 480px) {
  .container--main {
    margin: 2vw;
    padding: 2vw;
    max-height: 100%;
  }

  .modal--container {
    height: 100vh;
  }
  .modal--instructions {
    max-width: 90%;
    padding: 3vw 0;
  }
  .modal--instructions > img {
    max-width: 100%;
  }

  .content--container {
    flex-direction: column-reverse;
  }

  .content--cardsList h2 {
    display: none;
  }
  .content--cardsList {
    margin-top: 8px;
    flex-direction: row;
    overflow: scroll;
    align-items: flex-start;
    min-width: 80vw;
    gap: 10px;
  }
  .content--cardsList--card {
    display: flex;
    height: 50px;
    min-width: 150px;
    margin-bottom: 1vh;
    gap: 10px;
    padding: 0 5px;
  }

  .cardlist--card {
    display: none;
  }

  .content--cardsList--selector {
    display: flex;
  }
  .content--benefits {
    padding: 2vw;
    width: 95%;
    height: 75vh;
    overflow: scroll;
  }

  .content--benefits > table {
    width: 100%;
  }

  .content--card--image {
    max-width: 150px;
  }
}

